# seurust

./: .Rbuildignore  .gitattributes  .gitignore  DESCRIPTION  README.md
.github/workflows/: build-seurust-cran.yaml  merge_checks.yaml  publish-rseurat-crate.yaml  publish-rseurat-r.yaml  publish-seurust-crate.yaml  publish-seurust-r.yaml  rseurat_checks.yaml  seurust_checks.yaml
RSeurat/src/: Makevars.in  Makevars.win.in  entrypoint.c
RSeurat/src/rust/: Cargo.toml  README.md  build.rs  document.rs
RSeurat/src/rust/cpp/: snn_bridge.cpp
RSeurat/src/rust/src/: integration.rs  lib.rs  snn.rs  sparse.rs  utils.rs
RSeurat/src/rust/src/data_manipulation/: dense.rs  sparse_fns.rs
RSeurat/src/rust/src/modularity/: java_random.rs  network.rs  runner.rs  vos.rs
benchmarks/pbmc3k_seurat_github/: Dockerfile  README.md  run_benchmark.R
benchmarks/pbmc8k_seurat_github/: Dockerfile  README.md  run_benchmark.R
benchmarks/seurat_standard_analysis_github/: .gitignore  Dockerfile  README.md  run_benchmark.R
docker/: Dockerfile.rcpp  Dockerfile.rust  README.md  docker-compose.yml
examples/: compare_scrna_workflows.R  scrna_workflow_rust.R
r-universe/: README.md  packages.json.example
seurust/: .Rbuildignore  CRAN.md  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  cran-comments.md
seurust/src/rust/: Cargo.toml  README.md  document.rs  vendor.tar.xz
seurust/src/rust/cpp/: modularity_bridge.cpp
seurust/src/rust/src/: fast_nn_dist.rs  lib.rs  modularity.rs  sparse.rs  stats.rs
seurust/src/rust/src/data_manipulation/: dense.rs  mod.rs  sparse_fns.rs
seurust/src/rust/src/modularity/: clustering.rs  java_random.rs
(+74 files in other folders)
