[package]
name = "rseurat"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Rust native kernels for single-cell analysis (RSeurat / Seurat backend)"
readme = "README.md"
license = "MIT"
repository = "https://github.com/NebilI/Rust-Seurat"
homepage = "https://github.com/NebilI/Rust-Seurat/tree/main/RSeurat"
keywords = ["bioinformatics", "single-cell", "seurat", "sparse"]
categories = ["science"]

[lib]
crate-type = ["rlib", "staticlib"]
name = "rseurat"

[[bin]]
name = "document"
path = "document.rs"
bench = false

[dependencies]
extendr-api = "0.9.0"
extendr-ffi = "0.9.0"
ndarray = "0.16.1"
rayon = "1.10"
sprs = "=0.11.3"

[build-dependencies]
cc = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
